UI fix: create search bar component and added margin to fix UI overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,11 @@
     font-style: normal;
   }
 
-html,
 body {
   padding: 0;
   margin: 0;
   font-family: 'Avenir', sans-serif;
-  @apply h-screen overflow-x-hidden flex items-center justify-center
+  @apply min-h-screen overflow-x-hidden flex items-center justify-center
 }
 
 a {
@@ -30,4 +29,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.pages-container > * {
+  @apply mt-8
 }
